# structguru

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: integrations.md
examples/full_stack_fastapi/: main.py
src/structguru/: __init__.py  config.py  core.py  exceptions.py  metrics.py  otel.py  processors.py  queued.py  redaction.py  routing.py  sampling.py
src/structguru/integrations/: __init__.py  asgi.py  celery.py  django.py  flask.py  grpc.py  sentry.py  sqlalchemy.py
tests/: conftest.py  test_config.py  test_core.py  test_exceptions.py  test_metrics.py  test_otel.py  test_processors.py  test_queued.py  test_redaction.py  test_routing.py  test_sampling.py
tests/benchmarks/: test_bench_core.py
tests/test_integrations/: test_asgi.py  test_celery.py  test_django.py  test_flask.py  test_grpc.py  test_sentry.py  test_sqlalchemy.py
